formation et expérience

--- a/tuto.css
+++ b/tuto.css
@@ -30,9 +30,7 @@ body {
     	background-color: #62a9b6;
     	background-image : url(./images/bg.png);
 }
-[class*="col-"], footer {/*
-  background-color: lightgreen;
-  border: 2px solid black;*/
+[class*="col-"], footer {
   border-radius: 6px;
   line-height: 40px;
   text-align: center;
@@ -44,6 +42,10 @@ body {
   margin-left: auto;
   background-color: #ffffff;
   min-width: 230px;
+}
+
+#bloc_page{
+  border-radius: 0px 0px 10px 10px;  
 }
 
 @media (min-width: 768px) {
@@ -64,7 +66,7 @@ body {
 #bloc_page
 {
 
-   box-shadow: 8px 8px 8px #bfbfbf;
+   /*box-shadow: 8px 8px 8px #bfbfbf;*/
 }
 /***********************
 
@@ -119,7 +121,7 @@ nav a:hover
 
 #ma_photo
 {
-  border-radius: 10px;
+  border-radius: 20px;
   margin-top: 10px;
   max-width: 250px;
 }
@@ -184,9 +186,10 @@ nav a:hover
 #tete
 {
 
-    background-color: rgb(240,240,240);/*
-    box-shadow: 8px 8px 5px #aaa;*/
+    background-color: rgb(240,240,240);
     height: auto;
+    padding-top: 30px;
+    padding-bottom: 10px;
 }
 
 
@@ -245,10 +248,10 @@ background-color: #EAFDFF ;
 #aside_exp_form
  {
     background-color: rgba(0,0,250,0.25);
-    box-shadow: 8px 8px 5px #aaa;
+   /* box-shadow: 8px 8px 5px #aaa;*/
     border-radius: 5px;
     color: #330099;
-    font-size: 1.8em;  
+    font-size: 1.5em;  
     text-transform: uppercase;
  }
 
@@ -264,10 +267,12 @@ background-color: #EAFDFF ;
 
 #titre_exp_form
 {
-    font-size: 20px;
-    background-color: #330099;
-    color: #ffffff;
+    font-size: 25px;
+    //background-color: #330099;
+    color: #330099;
     border-radius: 5px;
+    font-family:  New Century Schoolbook, serif;
+    margin-bottom: 0px;
 }
 
 #sujet_exp_form
@@ -283,20 +288,23 @@ background-color: #EAFDFF ;
 
 #titre_aside_exp_form
 {
+  padding: 10px 0px 0px 0px;
 }
 
 #row-exp_form
 {
-  border-width: 0px 0px 4px 0px;
+  border-width: 1px 1px 1px 1px;
   border-style: solid;
   border-color: rgba(0,0,250,0.25);
   padding-bottom: 10px;
   margin-bottom: 30px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px #bfbfbf;
 }
 
 #plaquette_titre
 {
-  box-shadow: 8px 8px 8px #bfbfbf;
+  //box-shadow: 8px 8px 8px #bfbfbf;
 }
 
 /*********
