--- a/tuto.css
+++ b/tuto.css
@@ -190,8 +190,8 @@ nav a:hover
    margin-bottom: 15px;
    margin-top: 15px;
    padding-top: 15px;
-   padding-bottom: 15px;/*
-   box-shadow: 8px 8px 8px #bfbfbf;*/
+   padding-bottom: 15px;
+   width: 100%;
 
 }
 
@@ -211,7 +211,7 @@ nav a:hover
   font-size: 19px;
   line-height: 1.666666667em;
   color: #6c6764;
-  margin-top: 30px;
+  margin-top: 5px;
 }
 #nom
 {
@@ -403,6 +403,14 @@ border-radius: 5px;
 
 /****************************
 
-compétence
+carte
 
 ****************************/
+
+
+#carte{
+  width:90%; 
+  height:39%
+}
+
+
