first version ordi

--- a/tuto.css
+++ b/tuto.css
@@ -172,7 +172,7 @@ nav a:hover
     color: #ffffff;
     font-family: Dayrom, serif;
     font-weight: normal;
-    font-size: 1.1em;
+    font-size: 13px;
 }
 #nav_barre_page_telecharge
 {
