--- a/css/tuto.css
+++ b/css/tuto.css
@@ -91,8 +91,7 @@ nav a:hover
 {
     display: inline-block;
     font-family: Dayrom, serif, 'BallparkWeiner';
-    font-weight: normal;/*
-    background-color: rgb(240,240,240);*/
+    font-weight: normal;
 }
 
 #tataaside
